[project]
name = "cal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fuzzywuzzy>=0.18.0",
    "nylas>=6.4.0",
    "pydantic>=2.9.2",
    "pydantic-extra-types>=2.10.0",
    "python-dotenv>=1.0.1",
]
